add swagger docs for opera
